--- a/translations/kangyur/placeholders/089-012_toh555-the_sutra_the_supremely_victorious_golden_light.xml
+++ b/translations/kangyur/placeholders/089-012_toh555-the_sutra_the_supremely_victorious_golden_light.xml
@@ -20,14 +20,15 @@
                 <editor role="proofreader" ref="eft:person-52">Tracy Davis</editor>
                 <editor role="copyEditor" ref="eft:person-249">Konchog Norbu</editor>
                 <editor role="associateEditor" ref="eft:person-430">H.S. Sum Cheuk Shing</editor>
+                <editor role="projectEditor" ref="eft:person-289">Nathaniel Rich</editor>
                 <sponsor ref="sponsors.xml#sponsor-181">Zhang Dada</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.12 <date>2019</date>
+                <edition>v 0.0.14 <date>2019</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="2.c">
+            <publicationStmt status="2.b">
                 <idno xml:id="UT22084-089-012"/>
                 <date/>
             </publicationStmt>
@@ -43,7 +44,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-04-28T10:12:26.643Z" user="admin">28/04/2023 10:12:26</note>
+                <note type="lastUpdated" date-time="2023-05-12T10:24:42.978Z" user="admin">12/05/2023 10:24:42</note>
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2020-03-06T13:46:43.307Z" user="line-tofte">2.h</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-05-07T13:58:34.151Z" user="line-tofte">Auto (update-contributors)</note>
@@ -62,6 +63,9 @@
                 <note type="updated" update="text-version" value="0.0.11" date-time="2023-02-21T10:37:34.052Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="translation-status" value="2.c" date-time="2023-04-28T10:12:22.377Z" user="line-tofte">2.c</note>
                 <note type="updated" update="text-version" value="0.0.12" date-time="2023-04-28T10:12:22.377Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.13" date-time="2023-04-28T10:14:56.054Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.b" date-time="2023-05-12T10:24:38.757Z" user="line-tofte">2.b</note>
+                <note type="updated" update="text-version" value="0.0.14" date-time="2023-05-12T10:24:38.757Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
