--- a/translations/kangyur/placeholders/090-015_toh571,990-the_spell_of_janguli.xml
+++ b/translations/kangyur/placeholders/090-015_toh571,990-the_spell_of_janguli.xml
@@ -14,10 +14,10 @@
                 <author role="translatorEng" ref="eft:person-274">Adam Krug</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2022</date>
+                <edition>v 0.0.3 <date>2022</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="3">
+            <publicationStmt status="2.h">
                 <idno xml:id="UT22084-090-015"/>
                 <date/>
             </publicationStmt>
@@ -42,10 +42,12 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-12-16T09:18:01.852Z" user="admin">16/12/2022 09:18:01</note>
+                <note type="lastUpdated" date-time="2023-05-15T13:05:59.86Z" user="admin">15/05/2023 13:05:59</note>
                 <note type="updated" update="translation-status" value="3" date-time="2022-12-16T09:17:27.962Z" user="line-tofte">3</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-16T09:17:27.962Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2022-12-16T09:17:56.083Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.h" date-time="2023-05-15T13:05:55.572Z" user="line-tofte">2.h</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2023-05-15T13:05:55.572Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
