--- a/translations/kangyur/placeholders/091-010_toh613,989-the_incantation_of_the_goddess_cunda.xml
+++ b/translations/kangyur/placeholders/091-010_toh613,989-the_incantation_of_the_goddess_cunda.xml
@@ -13,10 +13,10 @@
                 <author role="translatorEng" ref="eft:person-274">Adam Krug</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.5 <date>2022</date>
+                <edition>v 0.0.6 <date>2022</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="3">
+            <publicationStmt status="2.h">
                 <idno xml:id="UT22084-091-010"/>
                 <date/>
             </publicationStmt>
@@ -41,13 +41,15 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-12-19T08:18:15.451Z" user="admin">19/12/2022 08:18:15</note>
+                <note type="lastUpdated" date-time="2023-05-15T13:08:30.443Z" user="admin">15/05/2023 13:08:30</note>
                 <note type="updated" update="translation-status" value="3" date-time="2022-12-13T14:30:41.181Z" user="line-tofte">3</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-13T14:30:41.181Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2022-12-13T14:31:20.345Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="text-version" value="0.0.3" date-time="2022-12-16T09:16:27.826Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="text-version" value="0.0.4" date-time="2022-12-19T08:15:53.756Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="text-version" value="0.0.5" date-time="2022-12-19T08:18:13.971Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.h" date-time="2023-05-15T13:08:26.156Z" user="line-tofte">2.h</note>
+                <note type="updated" update="text-version" value="0.0.6" date-time="2023-05-15T13:08:26.156Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
