--- a/translations/kangyur/placeholders/091-057_toh660,997-the_incantation_the_mother_of_the_demons.xml
+++ b/translations/kangyur/placeholders/091-057_toh660,997-the_incantation_the_mother_of_the_demons.xml
@@ -13,10 +13,10 @@
                 <author role="translatorEng" ref="eft:person-274">Adam Krug</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2022</date>
+                <edition>v 0.0.3 <date>2022</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="3">
+            <publicationStmt status="2.h">
                 <idno xml:id="UT22084-091-057"/>
                 <date/>
             </publicationStmt>
@@ -41,10 +41,12 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-12-16T09:29:03.526Z" user="admin">16/12/2022 09:29:03</note>
+                <note type="lastUpdated" date-time="2023-05-15T13:09:17.254Z" user="admin">15/05/2023 13:09:17</note>
                 <note type="updated" update="translation-status" value="3" date-time="2022-12-16T09:28:31.295Z" user="line-tofte">3</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-16T09:28:31.295Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2022-12-16T09:28:57.773Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.h" date-time="2023-05-15T13:09:12.944Z" user="line-tofte">2.h</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2023-05-15T13:09:12.944Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
