--- a/translations/kangyur/placeholders/066-008_toh250-the_sutra_on_four_points.xml
+++ b/translations/kangyur/placeholders/066-008_toh250-the_sutra_on_four_points.xml
@@ -11,12 +11,13 @@
                 <author role="translatorMain" ref="eft:team-47"/>
                 <author role="translatorEng" ref="eft:person-258">Adam Pearcey</author>
                 <editor role="projectEditor" ref="eft:person-411">David Fiordalis</editor>
+                <editor role="copyEditor" ref="eft:person-433">Dawn Collins</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.8 <date>2021</date>
+                <edition>v 0.0.10 <date>2021</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.e">
+            <publicationStmt status="2.d">
                 <idno xml:id="UT22084-066-008"/>
                 <date/>
             </publicationStmt>
@@ -32,7 +33,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-04-20T09:51:51.379Z" user="admin">20/04/2023 09:51:51</note>
+                <note type="lastUpdated" date-time="2023-05-17T09:56:40.56Z" user="admin">17/05/2023 09:56:40</note>
                 <note type="updated" update="translation-status" value="3" date-time="2021-02-08T07:57:37.013Z" user="line-tofte">3</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2021-02-08T07:57:37.013Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-02-08T07:57:53.875Z" user="line-tofte">Auto (update-contributors)</note>
@@ -46,6 +47,9 @@
                 <note type="updated" update="text-version" value="0.0.7" date-time="2023-03-29T13:27:40.959Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="translation-status" value="2.e" date-time="2023-04-20T09:51:47.112Z" user="line-tofte">2.e</note>
                 <note type="updated" update="text-version" value="0.0.8" date-time="2023-04-20T09:51:47.112Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.9" date-time="2023-04-20T09:53:26.861Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.d" date-time="2023-05-17T09:56:36.163Z" user="line-tofte">2.d</note>
+                <note type="updated" update="text-version" value="0.0.10" date-time="2023-05-17T09:56:36.163Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
