--- a/translations/tengyur/placeholders/113-010_toh3990-aryacaturdharmakavyakhyana.xml
+++ b/translations/tengyur/placeholders/113-010_toh3990-aryacaturdharmakavyakhyana.xml
@@ -5,17 +5,18 @@
         <fileDesc>
             <titleStmt>
                 <title xml:lang="en" type="mainTitle">An Explanation of the Noble Sūtra The Four Dharmas</title>
-                <title xml:lang="Bo-Ltn" type="mainTitle">'phags pa chos bzhi pa'i rnam par bshad pa/</title>
                 <title xml:lang="bo" type="mainTitle">འཕགས་པ་ཆོས་བཞི་པའི་རྣམ་པར་བཤད་པ།</title>
+                <title xml:lang="Bo-Ltn" type="mainTitle">'phags pa chos bzhi pa'i rnam par bshad pa/</title>
                 <author role="translatorMain" ref="eft:team-47"/>
                 <author role="translatorEng" ref="eft:person-258">Adam Pearcey</author>
                 <editor role="projectEditor" ref="eft:person-411">David Fiordalis</editor>
+                <editor role="copyEditor" ref="eft:person-433">Dawn Collins</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.10 <date>2022</date>
+                <edition>v 0.0.12 <date>2022</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.e">
+            <publicationStmt status="2.d">
                 <idno xml:id="UT23703-113-010"/>
                 <date/>
             </publicationStmt>
@@ -32,7 +33,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-04-20T09:55:00.621Z" user="admin">20/04/2023 09:55:00</note>
+                <note type="lastUpdated" date-time="2023-05-17T10:00:51.488Z" user="admin">17/05/2023 10:00:51</note>
                 <note type="updated" update="translation-status" value="4" date-time="2022-01-28T08:36:55.219Z" user="line-tofte">4</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2022-01-28T08:36:55.219Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="import" value="fileDesc" import="tengyur-data-3981-4019_PH_new_v2.4.xml" date-time="2022-01-28T10:32:05.149Z" user="admin"/>
@@ -51,6 +52,9 @@
                 <note type="updated" update="text-version" value="0.0.9" date-time="2023-03-29T13:29:49.286Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="translation-status" value="2.e" date-time="2023-04-20T09:54:56.376Z" user="line-tofte">2.e</note>
                 <note type="updated" update="text-version" value="0.0.10" date-time="2023-04-20T09:54:56.376Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.11" date-time="2023-04-20T09:55:50.885Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.d" date-time="2023-05-17T10:00:47.138Z" user="line-tofte">2.d</note>
+                <note type="updated" update="text-version" value="0.0.12" date-time="2023-05-17T10:00:47.138Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
