--- a/translations/kangyur/translations/056-006_toh138-the_great_collection_sutra_of_the_incantations_of_ratnaketu.xml
+++ b/translations/kangyur/translations/056-006_toh138-the_great_collection_sutra_of_the_incantations_of_ratnaketu.xml
@@ -31,7 +31,7 @@
         <sponsor ref="sponsors.xml#sponsor-121">Twenty and family</sponsor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.0.22 <date>2022</date>
+                <edition>v 1.0.23 <date>2023</date>
                 </edition>
             </editionStmt>
       <publicationStmt status="1">
@@ -67,7 +67,7 @@
         </bibl>
       </sourceDesc>
       <notesStmt>
-        <note type="lastUpdated" date-time="2023-05-10T10:30:44.651Z" user="admin">10/05/2023 10:30:44</note>
+        <note type="lastUpdated" date-time="2023-05-18T16:21:22.108Z" user="admin">18/05/2023 16:21:22</note>
         <note type="updated" update="translation-status" value="2.c" date-time="2019-05-01T10:47:28.638Z" user="john">2.c</note>
         <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
         <note type="updated" update="translation-status" value="2.d" date-time="2020-01-28T06:13:12.9Z" user="mike">2.d</note>
@@ -107,6 +107,7 @@
           <note type="updated" update="text-version" value="1.0.20" date-time="2023-05-10T10:08:08.689Z" user="john">Spelling corrected.</note>
           <note type="updated" update="text-version" value="1.0.21" date-time="2023-05-10T10:25:13.459Z" user="john">An error in ch 6 (Candraprabha not Subhūti) corrected.</note>
           <note type="updated" update="text-version" value="1.0.22" date-time="2023-05-10T10:30:41.709Z" user="john">Update following re-cache</note>
+          <note type="updated" update="text-version" value="1.0.23" date-time="2023-05-18T16:21:19.159Z" user="john">Three milestones and line breaks added to segment passages better.</note>
       </notesStmt>
     </fileDesc>
   </teiHeader>
@@ -2506,6 +2507,8 @@
           <milestone unit="chunk" xml:id="UT22084-056-006-450"/>
           <p tid="300">They all bowed their heads to the feet of Śāriputra <ref cRef="F.211.a" type="folio" xml:id="UT22084-056-006-1928"/> and sat down in front of him, in the middle of the street, to hear the
             Dharma.</p>
+          <lb/>
+          <milestone unit="chunk" xml:id="UT22084-056-006-2072"/>
           <p tid="301">Around the same time, the great Venerable Maudgalyāyana entered the great
             city of Rājagṛha through the eastern gate, in order to beg alms. But as before, fifty
             māra youths sang the following in unison with Maudgalyāyana:<note place="end" xml:id="UT22084-056-006-452"> It is indicated in the Skt. text that this
@@ -2574,6 +2577,8 @@
           <p tid="311">The fifty māra youths bowed their heads to the feet of Venerable
             Maudgalyāyana and sat down in front of him, in the middle of the street, to hear the
             Dharma.</p>
+          <lb/>
+          <milestone unit="chunk" xml:id="UT22084-056-006-2071"/>
           <p tid="312">Around the same time, Venerable Pūrṇa, the son of Maitrāyaṇī, entered the
             city through the northern gate to beg alms. <ref type="sanskrit">{K66}</ref> As before,
             fifty māra youths sang in unison with him:<!--<note place="end" xml:id="UT22084-056-006-464"
@@ -2704,6 +2709,8 @@
           <milestone unit="chunk" xml:id="UT22084-056-006-482"/>
           <p tid="327">All fifty of the māra youths bowed their heads to the feet of Venerable Pūrṇa
             and sat down in front of him, in the middle of the street, to hear the Dharma.</p>
+          <lb/>
+          <milestone unit="chunk" xml:id="UT22084-056-006-2070"/>
           <p tid="328">Around the same time, Venerable Subhūti entered the great city of Rājagṛha
             through the western gate <ref type="sanskrit">{TK81}</ref> to beg alms. There, at the
             gate to the city, fifty māra youths, endowed with supreme youthful beauty, attired to
@@ -8460,9 +8467,9 @@
           <item>
                         <gloss xml:id="UT22084-056-006-1550" type="term" mode="match">
                             <term>blessed one</term>
-                            <term xml:lang="Bo-Ltn">bcom ldan ’das</term>
-                            <term xml:lang="bo">བཅོམ་ལྡན་འདས།</term>
-                            <term xml:lang="Sa-Ltn">bhagavat</term>
+                            <term xml:lang="Bo-Ltn" type="sourceAttested">bcom ldan ’das</term>
+                            <term xml:lang="bo" type="sourceAttested">བཅོམ་ལྡན་འདས།</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">bhagavat</term>
                             <term type="alternative">lord</term>
                             <term type="alternative">blessed</term>
                             <term type="definition">A title used for the Buddha and other tathāgatas.</term>
@@ -9300,16 +9307,13 @@
             </gloss>
           </item>
           <item>
-            <gloss type="term" xml:id="UT22084-056-006-1623">
-              <term>spirit</term>
-              <term xml:lang="Bo-Ltn">’byung po </term>
-              <term xml:lang="bo">འབྱུང་པོ།</term>
-              <term xml:lang="Sa-Ltn">bhūta</term>
-              <term type="definition">A class of <term type="ignore">spirits</term>; any nonhuman
-                being.</term>
-              <!--<term type="alternative">being</term>-->
-            </gloss>
-          </item>
+                        <gloss xml:id="UT22084-056-006-1623" type="term" mode="match">
+                            <term>spirit</term>
+                            <term xml:lang="Bo-Ltn" type="sourceAttested">’byung po</term>
+                            <term xml:lang="bo" type="sourceAttested">འབྱུང་པོ།</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">bhūta</term><!--<term type="alternative">being</term>-->
+                        </gloss>
+                    </item>
           <item>
             <gloss type="term" xml:id="UT22084-056-006-1624">
               <term>stream entry</term>
