--- a/translations/kangyur/translations/090-005_toh561-the_great_amulet_queen_of_incantations.xml
+++ b/translations/kangyur/translations/090-005_toh561-the_great_amulet_queen_of_incantations.xml
@@ -37,7 +37,7 @@
                                         Cotter</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.0 <date>2023</date>
+                <edition>v 1.0.1 <date>2023</date>
                 </edition>
             </editionStmt>
                         <publicationStmt status="1.a">
@@ -82,7 +82,7 @@
                                 </bibl>
                         </sourceDesc>
                         <notesStmt>
-                                <note type="lastUpdated" date-time="2023-05-18T21:12:36.695Z" user="admin">18/05/2023 21:12:36</note>
+                                <note type="lastUpdated" date-time="2023-05-18T21:28:42.025Z" user="admin">18/05/2023 21:28:42</note>
                                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated
                                         version increment</note>
                                 <note type="updated" update="translation-status" value="2.d" date-time="2020-01-28T06:23:41.721Z" user="mike">2.d</note>
@@ -108,6 +108,7 @@
                                         (update-contributors)</note>
                             <note type="updated" update="translation-status" value="1.a" date-time="2023-05-18T21:12:32.347Z" user="martina-cotter">1.a</note>
                             <note type="updated" update="text-version" value="1.0.0" date-time="2023-05-18T21:12:32.347Z" user="martina-cotter">First published version</note>
+                            <note type="updated" update="text-version" value="1.0.1" date-time="2023-05-18T21:28:39.143Z" user="martina-cotter">updated sponsorship.</note>
                         </notesStmt>
                 </fileDesc>
         </teiHeader>
@@ -152,9 +153,6 @@
                                 <p tid="5">The translation was completed under the patronage and
                                         supervision of 84000: Translating the Words of the
                                         Buddha.</p>
-                                <lb/>
-                                <milestone unit="chunk" xml:id="UT22084-090-005-5"/>
-                                <p tid="7">[Sponsored by XXXXXX]</p>
                         </div>
                         <div type="introduction">
                                 <head type="introduction" tid="8">Introduction</head>
@@ -542,7 +540,7 @@
                                                 patterns. </p>
                                         <milestone unit="chunk" xml:id="UT22084-090-005-42"/>
                                         <p tid="32">They included, among others, <ref cRef="F.118.b" type="folio" xml:id="UT22084-090-005-659"/>
-                                                venerable Śāri­putra, venerable Pūrṇo
+                                                venerable Śāriputra, venerable Pūrṇo
                                                 Maitrāyaṇī­putraḥ, venerable Kaphina, venerable
                                                 Subhūti, venerable Mahā­maudgalyāyana, venerable
                                                 Cunda, venerable Nanda, venerable Kāśyapa, venerable
@@ -4937,7 +4935,7 @@
                     </item>
                                         <item>
                         <gloss type="person" xml:id="UT22084-090-005-838">
-                                                  <term>Mahāmaudgalyāyana</term>
+                                                <term>Mahā­maudgalyāyana</term>
                                                   <term xml:lang="Bo-Ltn" status="verified">maud gal
                                                   gyi bu </term>
                                                   <term xml:lang="bo">མཽད་གལ་གྱི་བུ།</term>
@@ -5708,15 +5706,6 @@
                                                   <term xml:lang="Bo-Ltn" status="verified">rdo
                                                   rje’i lu gu rgyud </term>
                                                   <term xml:lang="bo">རྡོ་རྗེའི་ལུ་གུ་རྒྱུད།</term>
-                                                  <term xml:lang="Sa-Ltn" status="verified">vajrasaṅkalā</term>
-                                                </gloss>
-                    </item>
-                                        <item>
-                        <gloss type="person" xml:id="UT22084-090-005-912">
-                                                  <term>Vajrasaṅkalā</term>
-                                                  <term xml:lang="Bo-Ltn" status="verified">rdo rje
-                                                  lu gu rgyud </term>
-                                                  <term xml:lang="bo">རྡོ་རྗེ་ལུ་གུ་རྒྱུད།</term>
                                                   <term xml:lang="Sa-Ltn" status="verified">vajrasaṅkalā</term>
                                                 </gloss>
                     </item>
