--- a/translations/kangyur/translations/063-001_toh220-eliminating_those_with_corrupted_discipline.xml
+++ b/translations/kangyur/translations/063-001_toh220-eliminating_those_with_corrupted_discipline.xml
@@ -30,7 +30,6 @@
                                         Dharma</title>
                                 <title type="otherTitle" xml:lang="Bo-Ltn">tshul khrims ’chal ba
                                         tshar bcod pa </title>
-                                <title type="otherTitle" xml:lang="zh">佛藏斷除敗壞戒律經</title>
                                 <title type="otherTitle" xml:lang="Bo-Ltn">gzhi brtsams pa </title>
                                 <title type="otherTitle" xml:lang="Bo-Ltn">mdo sde rab tu rnam par
                                         ’byed pa </title>
@@ -38,6 +37,7 @@
                                         ’byed pa</title>
                                 <title type="otherTitle" xml:lang="Bo-Ltn">sangs rgyas kyi sde
                                         snod</title>
+                                <title type="otherTitle" xml:lang="zh">佛藏斷除敗壞戒律經</title>
                                 <author role="translatorMain" ref="eft:team-9">Translated by the
                                         Dharmachakra Translation Committee<lb/>under the patronage
                                         and supervision of 84000: Translating the Words of the
@@ -49,14 +49,15 @@
                                 <editor role="copyEditor" ref="eft:person-252">Dion Blundell</editor>
                                 <editor role="projectEditor" ref="eft:person-289">Nathaniel Rich</editor>
                                 <editor role="TEImarkupEditor" ref="eft:person-381">Martina Cotter</editor>
-                                <consultant role="dharmaMaster" ref="eft:person-40">Chökyi Nyima Rinpoche</consultant>
+                                <consultant role="dharmaMaster" ref="eft:person-40">Chokyi Nyima Rinpoche</consultant>
                                 <editor role="reviser" ref="eft:person-50">Andreas Doctor</editor>
+                                <editor role="finalReviewer" ref="eft:person-250">Rory Lindsay</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 0.0.8 <date>2022</date>
+                <edition>v 1.0.0 <date>2023</date>
                 </edition>
             </editionStmt>
-                        <publicationStmt status="2">
+                        <publicationStmt status="1.a">
                 <publisher>
                     <name>84000: Translating the Words of the Buddha</name>
                                         is a global non-profit initiative to translate all the
@@ -95,7 +96,7 @@
                                 </bibl>
                         </sourceDesc>
                         <notesStmt>
-                                <note type="lastUpdated" date-time="2023-03-10T08:30:14.372Z" user="admin">10/03/2023 08:30:14</note>
+                                <note type="lastUpdated" date-time="2023-05-19T13:19:49.957Z" user="admin">19/05/2023 13:19:49</note>
                                 <note type="updated" update="text-version" value="0.0.1" date-time="2020-03-16T14:58:50.259Z" user="line-tofte">0.0.1</note>
                                 <note type="updated" update="translation-status" value="2.h" date-time="2020-03-16T14:58:50.259Z" user="line-tofte">2.h</note>
                                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-07-05T16:22:36.428Z" user="mike">summary
@@ -139,7 +140,10 @@
                                 <note type="updated" update="text-version" value="0.0.5" date-time="2023-02-13T17:06:11.049Z" user="amy">Auto (update-sponsorship)</note>
                                 <note type="updated" update="text-version" value="0.0.6" date-time="2023-02-13T17:36:54.77Z" user="amy">Auto (update-sponsorship)</note>
                                 <note type="updated" update="text-version" value="0.0.7" date-time="2023-03-10T08:29:42.145Z" user="line-tofte">Auto (update-contributors)</note>
-                            <note type="updated" update="text-version" value="0.0.8" date-time="2023-03-10T08:30:08.597Z" user="line-tofte">Auto (update-contributors)</note>
+                                <note type="updated" update="text-version" value="0.0.8" date-time="2023-03-10T08:30:08.597Z" user="line-tofte">Auto (update-contributors)</note>
+                            <note type="updated" update="text-version" value="0.0.9" date-time="2023-05-02T10:19:44.663Z" user="line-tofte">Auto (update-contributors)</note>
+                            <note type="updated" update="translation-status" value="1.a" date-time="2023-05-19T13:19:45.556Z" user="martina-cotter">1.a</note>
+                            <note type="updated" update="text-version" value="1.0.0" date-time="2023-05-19T13:19:45.556Z" user="martina-cotter">First published version</note>
                         </notesStmt>
                 </fileDesc>
         </teiHeader>
@@ -177,7 +181,7 @@
                                         gives several prophecies about the future decline of the
                                         Dharma caused by the behavior of immoral monks. Throughout
                                         the sūtra, great emphasis is placed on the realization of
-                                        the empty nature of phenomena and the view of
+                                        the empty nature of things and the view of
                                         nonapprehending, which does not dwell on any phenomenon. The
                                         sūtra also highlights the important topic of how beings can
                                         gain, maintain, and potentially lose the lineage (Skt.
@@ -188,15 +192,13 @@
                                 <head type="acknowledgment" tid="3">Acknowledgements</head>
                                 <milestone unit="chunk" xml:id="UT22084-063-001-2"/>
                                 <p tid="4">Translated by the Dharmachakra Translation Committee
-                                        under the supervision of Chökyi Nyima Rinpoche. Nika Jovic
+                                        under the supervision of Chokyi Nyima Rinpoche. Nika Jovic
                                         translated the text from Tibetan into English and wrote the
                                         introduction. Andreas Doctor checked the translation against
                                         the Tibetan and edited the text.</p>
                                 <p tid="5">The translation was completed under the patronage and
                                         supervision of 84000: Translating the Words of the
                                         Buddha.</p>
-                                <lb/>
-                                <p tid="7">[Sponsored by XXXXXX]</p>
                         </div>
                         <div type="introduction">
                                 <head type="introduction" tid="8">Introduction</head>
@@ -210,13 +212,11 @@
                                                 epilogue. The sūtra begins with Śāriputra expressing
                                                 his amazement at the Buddha Śākyamuni’s teachings on
                                                 the way in which phenomena are uncompounded and
-                                                indescribable. The Buddha then illustrates the
-                                                greatness of the Dharma teachings on emptiness free
-                                                of apprehending using various analogies, and he
+                                                indescribable. The Buddha then uses various analogies to illustrate the greatness of the teachings on emptiness free of apprehending, and he
                                                 elaborates on the ultimate nature of phenomena. </p>
                                         <milestone unit="chunk" xml:id="UT22084-063-001-7"/>
                                         <p tid="11">Next, the Buddha differentiates between evil and
-                                                virtuous friends, emphasizing the point that evil
+                                                virtuous friends, emphasizing that evil
                                                 friends are those who cause others to apprehend
                                                 phenomena mistakenly. This teaching is followed by a
                                                 discussion on the meaning of recollecting the
@@ -224,9 +224,9 @@
                                                 all mental engagement has been pacified. The Buddha
                                                 then explains how a virtuous friend must teach
                                                 others, insisting on the nature of the correct view.
-                                                He elaborates on the meaning of the noble Saṅgha,
+                                                He elaborates on the meaning of the noble saṅgha,
                                                 revealing that there will be monks in the future who
-                                                will deceive householders with wrong teachings, in
+                                                will deceive householders with wrong teachings in
                                                 the pursuit of their own livelihood. The Buddha also
                                                 warns against the many groups of non-Buddhists who
                                                 will reject the unsurpassed and perfect awakening of
@@ -243,7 +243,7 @@
                                                 interpretations of the Dharma in the world.
                                                 Śākyamuni then discusses several of his past lives
                                                 in which he worshiped and pleased countless other
-                                                buddhas with the wish to attain awakening, but
+                                                buddhas with the wish to attain awakening but
                                                 lacked the view of emptiness free of apprehending.
                                                 Finally, the epilogue highlights the need to abandon
                                                 all clinging to the view of a self, and it cautions
@@ -257,7 +257,7 @@
                                                 the Buddha argues that it is critical that such
                                                 beings be excluded from the monastic saṅgha, because
                                                 their presence compromises one of the saṅgha’s
-                                                primary functions, as the proper recipient of gifts
+                                                primary functions as the proper recipient of gifts
                                                 that are given through faith. When such beings hide
                                                 in the monastic ranks, we are told, they are no
                                                 better than thieves and robbers who steal the
@@ -312,8 +312,7 @@
                                         </p>
                                         <milestone unit="chunk" xml:id="UT22084-063-001-13"/>
                                         <p tid="16">The Chinese translation (Taishō 653)<note place="end" xml:id="UT22084-063-001-14">
-                                                <ref target="http://www.acmuller.net/descriptive_catalogue/files/k0529.html">Chinese translation.</ref>
-                        </note> was
+                                                <title xml:lang="Zh-Ltn">Fo cang jing</title> <title xml:lang="zh">佛藏經</title> (<title xml:lang="Sa-Ltn">buddha­piṭakaduḥ­śīlanigraha</title>), Taishō 653 (<ref target="https://cbetaonline.dila.edu.tw/en/T0653">CBETA</ref>; <ref target="https://21dzk.l.u-tokyo.ac.jp/SAT2018/T0653.html">SAT</ref>).</note> was
                                                 completed by the renowned translator Kumārajīva
                                                 (344–413 <hi rend="small-caps">ce</hi>) in 405 <hi rend="small-caps">ce</hi>, during his stay in the
                                                 former capital of Chang’an, modern-day Xi’an.
@@ -956,7 +955,7 @@
                                                 nonvirtuous qualities. Focus and rely on virtuous
                                                 qualities. Strive to cultivate the path. Bear those
                                                 marks that indicate virtuous qualities perfectly in
-                                                mind, and focus on the fact that nirvāṇa is
+                                                mind and focus on the fact that nirvāṇa is
                                                 happiness and peace. Work to acquire this view, so
                                                 that you can attain nirvāṇa.’ </p>
                                         <milestone unit="chunk" xml:id="UT22084-063-001-86"/>
@@ -1238,12 +1237,12 @@
                                         <p tid="96">The Blessed One replied, “Śāriputra, a monk
                                                 should instruct and teach another monk about this as
                                                 follows: ‘Come, monk. Cultivate recollecting the
-                                                Buddha, and direct your attention to him. Do not
+                                                Buddha and direct your attention to him. Do not
                                                 focus on a state of unification. Since there are no
                                                 entities when they are seen correctly, you must
                                                 direct yourself toward the fact that the intrinsic
                                                 nature of phenomena is not an object of correct
-                                                seeing, and abandon your perception that something
+                                                seeing and abandon your perception that something
                                                 lacking intrinsic nature possesses an essence.</p>
                                         <milestone unit="chunk" xml:id="UT22084-063-001-106"/>
                                         <p tid="97">‘Since you must abandon the perception of his
@@ -6962,7 +6961,7 @@
                                                 indexes/index-taisho.html.</bibl>
                                         <bibl xml:id="UT22084-063-001-654">McCombs, M. Jason.
                                                 “Mahāyāna and the Gift: Theories and Practices.” PhD
-                                                thesis, Univ. Of California, Los Angeles,
+                                                thesis, Univ. of California, Los Angeles,
                                                 2014.</bibl>
                                         <bibl xml:id="UT22084-063-001-655">Morrell, Robert E., Muju,
                                                 Ichien. <title xml:lang="en">Sand and Pebbles
@@ -7440,12 +7439,21 @@
                                                   <term xml:lang="Bo-Ltn" status="verified">rigs </term>
                                                   <term xml:lang="bo">རིགས།</term>
                                                   <term xml:lang="Sa-Ltn" status="verified">gotra</term>
-                                                <term type="definition">I suggest this: A term for the "lineage" that assures those who hold it eventual attainment of buddhahood. In this sūtra the status
+                                                <term type="definition">A term for the “lineage” that assures those who hold it eventual attainment of buddhahood. In this sūtra the status
                                                   of someone who holds the lineage depends primarily
                                                   on abandoning any wrong views associated with
                                                   apprehending and realizing the view of emptiness
                                                   free from apprehending. </term>
                                                 </gloss>
+                    </item>
+                                        <item>
+                        <gloss type="term" xml:id="UT22084-063-001-949">
+                                                <term>tathāgata­garbha</term>
+                                                <term xml:lang="Bo-Ltn">de bzhin gshegs pa'i snying po</term>
+                            <term xml:lang="bo">དེ་བཞིན་གཤེགས་པའི་སྙིང་པོ།</term>
+                                                <term xml:lang="Sa-Ltn">tathāgata­garbha</term>
+                                                <term type="definition">The innate potential for becoming a tathāgata that all beings possess. Also refers to a class of discourses that proclaim this teaching.</term>
+                                        </gloss>
                     </item>
                                         <item>
                         <gloss type="term" xml:id="UT22084-063-001-696">
