--- a/translations/kangyur/translations/063-001_toh220-eliminating_those_with_corrupted_discipline.xml
+++ b/translations/kangyur/translations/063-001_toh220-eliminating_those_with_corrupted_discipline.xml
@@ -54,7 +54,7 @@
                                 <editor role="finalReviewer" ref="eft:person-250">Rory Lindsay</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.1 <date>2023</date>
+                <edition>v 1.0.2 <date>2023</date>
                 </edition>
             </editionStmt>
                         <publicationStmt status="1.a">
@@ -79,7 +79,7 @@
                 <note>An early mistake in the assigning of UT numbers within the
                                         84000 project means that these ids diverge slightly from the
                                         standard logic.</note>
-                <date>2023-05-23</date>
+                <date>2023-05-19</date>
             </publicationStmt>
                         <sourceDesc>
                                 <bibl key="toh220" type="text">
@@ -96,7 +96,7 @@
                                 </bibl>
                         </sourceDesc>
                         <notesStmt>
-                                <note type="lastUpdated" date-time="2023-05-19T13:21:37.951Z" user="admin">19/05/2023 13:21:37</note>
+                                <note type="lastUpdated" date-time="2023-05-19T13:28:18.536Z" user="admin">19/05/2023 13:28:18</note>
                                 <note type="updated" update="text-version" value="0.0.1" date-time="2020-03-16T14:58:50.259Z" user="line-tofte">0.0.1</note>
                                 <note type="updated" update="translation-status" value="2.h" date-time="2020-03-16T14:58:50.259Z" user="line-tofte">2.h</note>
                                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-07-05T16:22:36.428Z" user="mike">summary
@@ -145,6 +145,7 @@
                             <note type="updated" update="translation-status" value="1.a" date-time="2023-05-19T13:19:45.556Z" user="martina-cotter">1.a</note>
                             <note type="updated" update="text-version" value="1.0.0" date-time="2023-05-19T13:19:45.556Z" user="martina-cotter">First published version</note>
                             <note type="updated" update="text-version" value="1.0.1" date-time="2023-05-19T13:21:35.038Z" user="martina-cotter">Auto (update-publication-status)</note>
+                            <note type="updated" update="text-version" value="1.0.2" date-time="2023-05-19T13:28:15.645Z" user="martina-cotter">Auto (update-publication-status)</note>
                         </notesStmt>
                 </fileDesc>
         </teiHeader>
