--- a/translations/kangyur/translations/034-007_toh19,554-the_perfection_of_wisdom_for_kausika.xml
+++ b/translations/kangyur/translations/034-007_toh19,554-the_perfection_of_wisdom_for_kausika.xml
@@ -33,10 +33,10 @@
                                 <editor role="finalReviewer" ref="eft:person-74">Ryan Damron</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.2 <date>2023</date>
+                <edition>v 1.0.3 <date>2023</date>
                 </edition>
             </editionStmt>
-                        <publicationStmt status="1.a">
+                        <publicationStmt status="1">
                 <publisher>
                     <name>84000: Translating the Words of the Buddha</name>
                                         is a global non-profit initiative to translate all the
@@ -83,7 +83,7 @@
                                 </bibl>
                         </sourceDesc>
                         <notesStmt>
-                                <note type="lastUpdated" date-time="2023-05-06T21:50:13.422Z" user="admin">06/05/2023 21:50:13</note>
+                                <note type="lastUpdated" date-time="2023-05-21T11:00:09.605Z" user="admin">21/05/2023 11:00:09</note>
                                 <note type="updated" update="translation-status" value="3" date-time="2021-06-08T09:30:26.839Z" user="line-tofte">3</note>
                                 <note type="updated" update="text-version" value="0.0.1" date-time="2021-06-08T09:30:26.839Z" user="line-tofte">0.0.1</note>
                                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-06-08T09:38:10.747Z" user="line-tofte">Auto
@@ -134,6 +134,8 @@
                             <note type="updated" update="text-version" value="1.0.0" date-time="2023-05-01T08:09:40.802Z" user="martina-cotter">1.0.0</note>
                             <note type="updated" update="text-version" value="1.0.1" date-time="2023-05-02T14:12:56.475Z" user="martina-cotter">Updated note 9.</note>
                             <note type="updated" update="text-version" value="1.0.2" date-time="2023-05-06T21:50:10.615Z" user="andre">Glossary revised - activated in CG</note>
+                            <note type="updated" update="translation-status" value="1" date-time="2023-05-21T11:00:05.047Z" user="sameer">1</note>
+                            <note type="updated" update="text-version" value="1.0.3" date-time="2023-05-21T11:00:05.047Z" user="sameer">Included in App v 3.2</note>
                         </notesStmt>
                 </fileDesc>
         </teiHeader>
