--- a/translations/kangyur/translations/049-004_toh109-the_sutra_on_the_mountain_gayasirsa.xml
+++ b/translations/kangyur/translations/049-004_toh109-the_sutra_on_the_mountain_gayasirsa.xml
@@ -42,10 +42,10 @@
                                         Lindsay</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.6 <date>2023</date>
+                <edition>v 1.0.7 <date>2023</date>
                 </edition>
             </editionStmt>
-                        <publicationStmt status="1.a">
+                        <publicationStmt status="1">
                 <publisher>
                     <name>84000: Translating the Words of the Buddha</name>
                                         is a global non-profit initiative to translate all the
@@ -84,7 +84,7 @@
                                 </bibl>
                         </sourceDesc>
                         <notesStmt>
-                                <note type="lastUpdated" date-time="2023-05-04T16:59:54.22Z" user="admin">04/05/2023 16:59:54</note>
+                                <note type="lastUpdated" date-time="2023-05-21T11:02:48.77Z" user="admin">21/05/2023 11:02:48</note>
                                 <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-10-08T07:42:51.906Z" user="andreas">v
                                         0.1.0</note>
                                 <note type="updated" update="translation-status" value="2.f" date-time="2020-01-27T13:10:59.245Z" user="mike">2.f</note>
@@ -136,6 +136,8 @@
                             <note type="updated" update="text-version" value="1.0.4" date-time="2023-04-17T12:06:29.797Z" user="martina-cotter">Updated note.</note>
                             <note type="updated" update="text-version" value="1.0.5" date-time="2023-04-18T17:22:31.694Z" user="martina-cotter">Adding new note for linking translation plus bib entry.</note>
                             <note type="updated" update="text-version" value="1.0.6" date-time="2023-05-04T16:59:51.328Z" user="andre">Glossary revised - activated in CG</note>
+                            <note type="updated" update="translation-status" value="1" date-time="2023-05-21T11:02:44.132Z" user="sameer">1</note>
+                            <note type="updated" update="text-version" value="1.0.7" date-time="2023-05-21T11:02:44.132Z" user="sameer">Included in App v 3.2</note>
                         </notesStmt>
                 </fileDesc>
         </teiHeader>
